# ChangeLog for dev-ruby/daemons
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/daemons/ChangeLog,v 1.28 2007/11/03 08:31:41 drac Exp $

  03 Nov 2007; Samuli Suominen <drac@gentoo.org> daemons-0.4.2.ebuild:
  Keyword ~amd64 wrt #185492.

  29 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  daemons-1.0.5.ebuild:
  ppc stable, bug #185266

  19 Jul 2007; Christoph Mende <angelos@gentoo.org> daemons-1.0.5.ebuild:
  Stable on amd64 wrt bug #185266

  17 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> daemons-1.0.5.ebuild:
  Stable on sparc wrt #185266

  16 Jul 2007; Markus Rothe <corsair@gentoo.org> daemons-1.0.5.ebuild:
  Stable on ppc64; bug #185205

  16 Jul 2007; Raúl Porcel <armin76@gentoo.org> daemons-1.0.5.ebuild:
  ia64/x86 stable wrt #185266

*daemons-1.0.7 (14 Jul 2007)

  14 Jul 2007; Joshua Nichols <nichoj@gentoo.org> +daemons-1.0.7.ebuild:
  Version bump. See bug #184633.

  21 May 2007; Richard Brown <rbrown@gentoo.org> Manifest:
  Fix Manifest, bug #179217

  20 May 2007; Richard Brown <rbrown@gentoo.org> +daemons-0.4.2.ebuild:
  Restore daemons-0.4.2 for nitro-0.40.0

*daemons-1.0.5 (13 May 2007)

  13 May 2007; Hans de Graaff <graaff@gentoo.org> -daemons-0.4.2.ebuild,
  +daemons-1.0.5.ebuild:
  Version bump: thanks to Jochen Schalanda in #177159.
  
  Changes in this version:
  * Applied patch that causes daemons to use '/var/log' as logfile 
    directory if you use :dir_mode = :system (thanks to Han Holl).
  * Daemons should now work with Ruby 1.9 (at least the basic features).

  21 Apr 2007; Raúl Porcel <armin76@gentoo.org> daemons-1.0.4.ebuild:
  ia64 stable

  14 Mar 2007; Tom Gall <tgall@gentoo.org> daemons-0.4.2.ebuild:
  added ~ppc64 (nitro dep)

  12 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> daemons-1.0.4.ebuild:
  Stable on sparc

  24 Feb 2007; Markus Rothe <corsair@gentoo.org> daemons-1.0.4.ebuild:
  Stable on ppc64; bug #166901
