@@ -1,4 +1,6 @@
 DIST daemons-1.0.7.gem 30720 RMD160 6c1084ea30156852aa8b8f269dae8fec4d04df45 SHA1 e83e324cda99a1d1ac882c9e7f1398161f7f772b SHA256 d053143da918fdf4a9a30b65df78295c0ecfbd31e553a487b4bb5ba80d307815
+DIST daemons-1.0.9.gem 30720 RMD160 2b4bf31bbc3858cd0fbc912c12300e40239e5b14 SHA1 f74de8fd47d602e2e54f34e93bf7302ac98ea0f7 SHA256 b82793ee137ab71cc90deca3448a8df98a1b85e4e2f38c07fdfc48dcfe6d0370
 EBUILD daemons-1.0.7.ebuild 538 RMD160 c70b461b99302842c517fb2d191ba9ef684d962a SHA1 9cc2017f1de34deab3b530b753358b4c2a2bc66a SHA256 7f694886759567c985ab791ef499523158fe9d80031e53dafb753db6583b0fce
-MISC ChangeLog 3517 RMD160 73c39bbe8e232dae4932a875627dcb17793fc309 SHA1 b41c05a0d472511a38392a9ea6918d5ac63f5e30 SHA256 77e456ba3c8d8578222344d083f4f36b2b892a07abedc67cfe217df7b732fbeb
+EBUILD daemons-1.0.9.ebuild 470 RMD160 dc1d160f5b108ece74bf6fdbe04a82d345b5e0a9 SHA1 f1ba39d8823389410c3ed53f1a329699b22a6d3e SHA256 5d33973be1d65c545c28ff1aa1dee9db6b3ac07198eab6755cf22d44f59c6f9b
+MISC ChangeLog 3718 RMD160 6b063733d1c2da367daec9786f31f00ab5fb1840 SHA1 5db784c1ce79969236b8eed6877f7062fc802ee9 SHA256 af725a3cdb45eba2decd481d325cab771f2264511510624e005076fa435b012f
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
