@@ -1,0 +1,15 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/daemons/daemons-1.0.9.ebuild,v 1.1 2007/11/10 08:14:10 graaff Exp $
+
+EAPI="prefix"
+
+inherit ruby gems
+
+DESCRIPTION="Wrap existing ruby scripts to be run as a daemon"
+HOMEPAGE="http://daemons.rubyforge.org/"
+
+LICENSE="Ruby"
+SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~ppc-macos ~sparc-solaris ~x86 ~x86-macos ~x86-solaris"
+IUSE=""
